welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:2: error: ';' expected but '=' found.
let nbBiscuit:int = 0
                  ^